Show error when too few characters are chosen.

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@ div.letter {
   justify-content: center;
   align-items: center;
   margin: 2px;
+  border: 1px solid dimgrey;
+}
+
+div.letter.error {
+  border: 1px solid red;
 }
 
 div.letter:nth-child(4),
